--- a/mern-spa/src/App.css
+++ b/mern-spa/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.row>* {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
